--- a/package.json
+++ b/package.json
@@ -14,6 +14,70 @@
     "test:ui": "vitest --ui",
     "e2e": "playwright test"
   },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    
+    "react-router-dom": "^6.21.0",
+    
+    "axios": "^1.6.2",
+    
+    "@tanstack/react-query": "^5.14.2",
+    "@tanstack/react-query-devtools": "^5.14.2",
+    
+    "zustand": "^4.4.7",
+    
+    "react-hook-form": "^7.49.2",
+    "zod": "^3.22.4",
+    "@hookform/resolvers": "^3.3.3",
+    
+    "date-fns": "^3.0.6",
+    
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.2.0",
+    
+    "lucide-react": "^0.303.0",
+    
+    "sonner": "^1.3.1",
+    
+    "class-variance-authority": "^0.7.0",
+    
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "@types/node": "^20.10.6",
+    
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.0.8",
+    
+    "typescript": "^5.3.3",
+    
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.32",
+    "autoprefixer": "^10.4.16",
+    
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    
+    "vitest": "^1.1.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/user-event": "^14.5.1",
+    "jsdom": "^23.0.1",
+    
+    "@playwright/test": "^1.40.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/preethamkh/porfolio-tracker-frontend.git"
