--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@tanstack/react-query": "^5.14.2",
     "@tanstack/react-query-devtools": "^5.14.2",
     "axios": "^1.6.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.0.6",
     "lucide-react": "^0.303.0",
     "react": "^18.2.0",
@@ -33,7 +33,8 @@
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.21.0",
     "sonner": "^1.3.1",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
