--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.71.1",
     "react-router-dom": "^6.21.0",
+    "recharts": "^3.7.0",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
